--- a/module-2-solution/index.html
+++ b/module-2-solution/index.html
@@ -42,5 +42,10 @@
 		</section>
 	</div>
 	</div>
+	<div class="col-lg-12 col-md-12 col-sm-12">
+        <p>Github repository for this assignment can be found
+            <a href="https://github.com/teapositve/coursera-html-css-js-/master/module-2-solution/" target="_blank">here</a>.
+        </p>
+    </div>
 </body>
 </html>
